--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.0.1",
     "core-js": "^2.6.5",
+    "tinymce": "^5.0.16",
     "vue": "^2.6.10"
   },
   "devDependencies": {
